--- a/release_notes.txt
+++ b/release_notes.txt
@@ -67,5 +67,8 @@ Build 33 : 2024-11-20
 	- Fix : Wifi firmware upload not working
 	- Fix : Charts not working on Safari
 
+Build 34 : 2024-11-22
+	- Fix : More work on V5 receiver pixels flashing in some configurations
+
 *** If there is a fix in an unreleased build you believe would help fix an issue you are experiencing then reach out to us at 
 support@pixelcontroller.com and we will provide you a pre-release.    
