--- a/SRxX V5/release_notes.txt
+++ b/SRxX V5/release_notes.txt
@@ -10,7 +10,9 @@ Build 3 : 2024-08-18
 	- Fix : Fix some SRx2 issues resulting in non-detection if first on the chain
 	- Fix : Remove pixel flash just before fuses turn off
 
-Build 4 : 2024-xx-xx
+Build 4 : 2024-12-07
+	- Fix : Address further flashing issues - this build requires all receivers connected in a chain to be at this version.
+	- Fix : Fix to handing blown fuses better
 
 *** If there is a fix in an unreleased build you believe would help fix an issue you are experiencing then reach out to us at 
 support@pixelcontroller.com and we will provide you a pre-release.    
